2008-03-20  Vincent Goulet  <vincent.goulet@act.ulaval.ca>

	* New function matpow() as alias to operator %^%.
	* R/matpow.R: miscellaneous fixes and prettyfication of comments


2008-03-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R (expm): rename "Eigen" to "R_Eigen"

	* src/expm.c (expm): get "1bal" case right.
	* tests/compare-bal-expm.R: minimal testing of "2bal" vs "1bal"

2008-02-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/expm.c (expm): second argument 'precond_kind'

	* src/expm.h: update for new second argument

	* src/expm-eigen.h: implement workaround for Lapack.h's zlange() typo

2008-02-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9-1  -- new version for the occasion

	* src/expm.c (expm): HOORAY !! --- fixed the octave bug:
	using simpler __ and correct __ code for  back-permuting

	* R/expm.R (expm): add method = "R_Ward77"
	  which works *correctly* !

2008-02-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/matpower.R ("%^%"): add R interface to
	* src/matpow.c

2008-02-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R (expm): add methods from David Firth's "mexp"
	and my modifications, of Fortran code in
	* src/mexp-common.f
	* src/matrexp.f
	* src/matrexpO.f