@@ -1,12 +1,12 @@
 Package: expm
 Type: Package
 Title: Matrix exponential
-Version: 0.9-2
+Version: 0.9-3
 Date: 2008-04-05
 Author: Vincent Goulet, Christophe Dutang, David Firth, Marina Shapira, Martin Maechler
 Maintainer: Vincent Goulet <vincent.goulet@act.ulaval.ca>
 Description: Simple package for computation of the matrix exponential and
  related quantities.
-Depends: R (>= 2.4.1)
+Depends: R (>= 2.7.0)
 Enhances: Matrix
 License: GPL (>= 2)
