@@ -6,12 +6,14 @@
 #include <R_ext/Rdynload.h>
 #include "expm-eigen.h"
 #include "expm.h"
+#include "logm-eigen.h"
 #include "matpow.h"
 
 static const R_CallMethodDef CallEntries[] = {
     {"do_expm", (DL_FUNC) &do_expm, 2},
     {"R_matpow", (DL_FUNC) &R_matpow, 2},
     {"do_expm_eigen", (DL_FUNC) &do_expm_eigen, 2},
+    {"do_logm_eigen", (DL_FUNC) &do_logm_eigen, 2},
     {NULL, NULL, 0}
 };
 
@@ -22,4 +24,5 @@ void R_init_expm(DllInfo *dll)
     R_RegisterCCallable("expm", "expm", (DL_FUNC) expm);
     R_RegisterCCallable("matpow", "matpow", (DL_FUNC) matpow);
     R_RegisterCCallable("expm_eigen", "expm_eigen", (DL_FUNC) expm_eigen);
+    R_RegisterCCallable("logm_eigen", "logm_eigen", (DL_FUNC) logm_eigen);    
 }
